@@ -1,3 +1,7 @@
+2007-12-12 Guillaume Rousse <guillomovitch@mandriva.org> 2.7.10
+
+	* drop xhost profile scriptlets, they belong to xhost
+
 2007-08-11 Guillaume Rousse <guillomovitch@mandriva.org> 2.7.9
 
 	* add iprop service
